Name:           nagios-view
Version:        1.0
Cabal-Version:  >= 1.4
Build-type:     Simple
Author:         Evgeny Tarasov, Ivan Glushkov 
License:        BSD3

Executable  nagios-view
    Build-Depends:  base >= 4 && < 5,
                    happstack-server >= 7.3 && <7.4,
                    mtl >= 1.1,
                    hsyslog >= 1.4 && < 2,
                    network >= 2.3 && < 3,
                    HDBC-sqlite3 == 2.3.*,
                    HDBC == 2.4.*,
                    lifted-base == 0.1.*,
                    time == 1.4.*,
                    containers == 0.5.*,
                    blaze-svg == 0.3.*,
                    blaze-html == 0.6.*,
                    blaze-markup == 0.5.*,
                    safe >= 0.3

    Main-Is:        Main.hs
    Other-modules:  NagView.Types
                    NagView.DailyDiagram
                    NagView.DBAccess
                    NagView.Utils
    Hs-Source-Dirs: src
    Ghc-Options:    -threaded -Wall -fno-warn-unused-do-bind
